--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Restaurantly Bootstrap Template - Index</title>
+  <title>Ristorante Romano</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -28,13 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Restaurantly
-  * Template URL: https://bootstrapmade.com/restaurantly-restaurant-template/
-  * Updated: Mar 17 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -45,13 +38,13 @@
 
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-phone d-flex align-items-center"><span>+62 813 9811 1709</span></i>
-        <i class="bi bi-clock d-flex align-items-center ms-4"><span> Selasa - Minggu: 10.00 - 22.00</span></i>
+        <i class="bi bi-clock d-flex align-items-center ms-4"><span> Tuesday - Sunday : 10 AM - 12 PM</span></i>
       </div>
 
       <div class="languages d-none d-md-flex align-items-center">
         <ul>
           <li>En</li>
-          <li><a href="#">De</a></li>
+          <li><a href="#">Ind</a></li>
         </ul>
       </div>
     </div>
@@ -67,7 +60,7 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="#InRestaurant">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
           <li><a class="nav-link scrollto" href="#specials">Specials</a></li>
@@ -105,8 +98,8 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1>Welcome to <span>Restaurantly</span></h1>
-          <h2>Delivering great food for more than 18 years!</h2>
+          <h1>Welcome to <span>Ristorante Romano</span></h1>
+          <h2>provides typical Italian food.</h2>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
@@ -130,24 +123,25 @@
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
             <div class="about-img">
-              <img src="assets/img/about.jpg" alt="">
+              <img src="assets/img/about-bg.jpg" alt="1">
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Enjoy the authentic flavors of Italy in the heart of the city. Warm and friendly atmosphere.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              As soon as I enter the Italian restaurant, you will enjoy the typical aroma of appetizing Italian dishes. 
+              The warm and comfortable decoration, with a strong Italian rustic feel, 
+              will make you feel like you are in aloft Italy. Dimly lit chandeliers, melodious Italian music, 
+              and friendly and welcoming staff will play the dimly lit, melodious Italian music.A delicious meal that starts with fresh ingredient.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> The Italian restaurant offers a wide variety of food and drinks. </li>
+              <li><i class="bi bi-check-circle"></i> A sweet and tempting dessert.</li>
+              <li><i class="bi bi-check-circle"></i> The perfect place to gather with family and friends.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              The Italian restaurant is a great place to enjoy delicious food, a warm atmosphere, and friendly service. 
+              Visit the nearest Italian restaurant and experience the authentic taste of Italy for yourself.
             </p>
           </div>
         </div>
@@ -169,24 +163,28 @@
           <div class="col-lg-4">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>01</span>
-              <h4>Lorem Ipsum</h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <h4>Delicious and authentic taste</h4>
+              <p>Italian cuisine is famous for its unrivaled deliciousness. 
+                A good Italian restaurant will use fresh, high-quality ingredients to create dishes that are authentic and full of flavor.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
-              <h4>Repellat Nihil</h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+              <h4>Good service</h4>
+              <p>The staff at Italian restaurants are usually friendly and helpful. 
+                They will be happy to help you choose dishes and answer your questions.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="300">
               <span>03</span>
-              <h4> Ad ad velit qui</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <h4>Unique cultural experience</h4>
+              <p> Eating at an Italian restaurant is a great way to experience Italian culture. 
+                You can learn about Italian culinary traditions and enjoy the hospitality of the Italian people.</p>
             </div>
           </div>
 
@@ -218,92 +216,102 @@
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/Ravioli.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span>$5.95</span>
+              <a href="#">Ravioli</a><span>Rp. 65.000,00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              cheese, meat or vegetables in a square or round shape similar to dumplings.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/risotto.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Bread Barrel</a><span>$6.95</span>
+              <a href="#">Risotto</a><span>Rp. 72.000,00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              rice, stock, onions, wine, mushrooms, shrimp and cheese.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/pizza.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Crab Cake</a><span>$7.95</span>
+              <a href="#">Pizza sausage</a><span>Rp. 105.000,00</span>
             </div>
             <div class="menu-ingredients">
-              A delicate crab cake served on a toasted roll with lettuce and tartar sauce
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Caesar Selections</a><span>$8.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Mozzarella cheese, Parmesan cheese, Garlic, Onion, Tomato, sausage.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/lasagna.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Tuscan Grilled</a><span>$9.95</span>
+              <a href="#">Lasagna</a><span>Rp. 124.000,00</span>
             </div>
             <div class="menu-ingredients">
-              Grilled chicken with provolone, artichoke hearts, and roasted red pesto
+              Meat, Onion, Garlic, Tomato, Sugar, Spices andseasonings, Lasagna noodles, Cheese, and Egg.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/panini.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Panini</a><span>Rp. 80.000,00</span>
+            </div>
+            <div class="menu-ingredients">
+              Italian bread, mayonnaise, Cheddar cheese, tomato, and Onion.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/pasta.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Mozzarella Stick</a><span>$4.95</span>
+              <a href="#">Pasta</a><span>Rp. 72.000,00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Greek Salad</a><span>$9.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Fresh spinach, crisp romaine, tomatoes, and Greek olives
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Spinach Salad</a><span>$9.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+              Spaghetti, and toping tomatoes, meat, fish, or cheese.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/Ossobuco.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Roll</a><span>$12.95</span>
+              <a href="#">Ossobuco</a><span>Rp. 89.000,00</span>
             </div>
             <div class="menu-ingredients">
-              Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+              Pieces of beef leg bone cooked with additional ingredients such as tomatoes, onions and carrots.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/gelato.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Gelato</a><span>Rp. 23.000,00</span>
+            </div>
+            <div class="menu-ingredients">
+              Milk, Heavy cream, egg yolks, and sugar.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/Panettone.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Panettone</a><span>Rp. 30.000,00</span>
+            </div>
+            <div class="menu-ingredients">
+              Egg, Yoghurt, Sugar, Vanilla Extract, Salt, Butter, and White sugar.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/tortelini.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Tortellini</a><span>Rp. 62.000,00</span>
+            </div>
+            <div class="menu-ingredients">
+              Beef, onion, garlic, tomato, tomato sauce, zucchini, and red wine.
             </div>
           </div>
 
