--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
         <i class="bi bi-clock d-flex align-items-center ms-4"><span> Tuesday - Sunday : 10 AM - 12 PM</span></i>
       </div>
 
-      <div class="languages d-none d-md-flex align-items-center">
-        <ul>
-          <li>En</li>
-          <li><a href="#">Ind</a></li>
-        </ul>
-      </div>
     </div>
   </div>
 
@@ -795,7 +789,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Owner : Moch Dzulqarnain Serdy</h4>
-            <img src="assets/img/owner.jpg" alt="Own" style="height: 200px;">
+            <img src="assets/img/owner.jpg" alt="Own" style="height: 200px; border: solid; margin-left: 12px;">
             <h4 style="margin-top: 10px;">Age : 16 Years Old</h4>
             <h4>Live in : Indonesia</h4>
             <form action="" method="post">
